src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Contact Active/Inactive designation.</description>
        <inlineHelpText>Uncheck this box if the contact is no longer with the organization.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <inlineHelpText>This field will display the actual creation date for records from CTS/ITA Central/Salesforce. Use this field for FY 15&apos; reporting</inlineHelpText>
        <label>Actual Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CTS_Contact_ID__c</fullName>
        <description>Legacy Contact ID for easy data loading and validation.</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy Contact ID for easy data loading and validation.</inlineHelpText>
        <label>CTS Contact ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTS_Org_ID__c</fullName>
        <description>Legacy Org ID for easy data loading and validation.</description>
        <inlineHelpText>Legacy Org ID for easy data loading and validation.</inlineHelpText>
        <label>CTS Org ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community User Detail</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Congressional_District__c</fullName>
        <label>Congressional District</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_18_ID__c</fullName>
        <description>Added for reporting purposes, returns casesafe ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact 18 ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_One__c</fullName>
        <description>Power of One concept used for Reporting purposes.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Zip_Len__c</fullName>
        <formula>LEN( MailingPostalCode )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Zip Len</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_AccountName_to_Text__c</fullName>
        <label>Copy AccountName to Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_ITA_Office__c</fullName>
        <formula>Account.Local_ITA_Office__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on Associated Organization local office</inlineHelpText>
        <label>Local ITA Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_County__c</fullName>
        <description>Field to identify county to be associated with other address for contact.</description>
        <label>Other County</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Office__c</fullName>
        <formula>Owner.ITA_Office__c</formula>
        <inlineHelpText>This is the primary ITA point of contact for the contact&apos;s office.</inlineHelpText>
        <label>Owner&apos;s Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Community_Member__c</fullName>
        <description>Field is checked if this Contact is a Community User</description>
        <formula>IF(  Community_User__r.IsActive = TRUE, TRUE, FALSE)</formula>
        <label>Active Community Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Contact_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only when record created in error.</inlineHelpText>
        <label>Request Contact Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ResearcherHIDDEN__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this Contact is associated with a Researcher Organization (record type Individual).</inlineHelpText>
        <label>Researcher - HIDDEN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SharePoint_ID__c</fullName>
        <description>Legacy SharePoint record ID</description>
        <label>SharePoint ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sharepoint_Org_Name__c</fullName>
        <description>Legacy SharePoint Organization Name</description>
        <label>Sharepoint Organization Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Opt-Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used for data migration purposes.</description>
        <inlineHelpText>Field used for data migration purposes.</inlineHelpText>
        <label>Data Migration Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Activities__c</fullName>
        <label>Total Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eMenu_ID__c</fullName>
        <label>eMenu ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eMenu_Org_Name__c</fullName>
        <description>Legacy eMenu Organization Name</description>
        <label>eMenu Organization Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this Contact.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>Total_Activities__c</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>Request_Removal</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Request_Contact_Removal__c</columns>
        <columns>Total_Activities__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Contact_Removal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Total_Activities__c</field>
            <operation>equals</operation>
        </filters>
        <label>Request Removal</label>
        <sharedTo>
            <group>Data_Admin_Team</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>ITA_Contacts</fullName>
        <active>true</active>
        <description>Used for all users</description>
        <label>ITA Contacts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner_Contact</fullName>
        <active>true</active>
        <description>Used for tracking contacts that are a part of Partnerships.</description>
        <label>Partner Contacts</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prevent_Edit_Organizations</fullName>
        <active>true</active>
        <description>Prevent users from Changing Organization Name for an existing Contact that doesn&apos;t work at that Organization anymore, to keep that contact record with that org.

Add System admin condition eventually.
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;Help Desk Administration&quot;,
$Profile.Name &lt;&gt; &quot;Data Team Admin&quot;,
ISCHANGED(AccountId)
)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>You cannot change the value for Organization Name on a Contact.  Please create a new Contact record related to the new Organization.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_First_Name</fullName>
        <active>true</active>
        <description>Contact&apos;s First Name field is Required, except for Sys Admins and Data Team Profile users.

ISBLANK(FirstName)</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Data Team Admin&quot;,
$User.Id &lt;&gt; &quot;005r0000000EZ0K&quot;,
ISBLANK(FirstName)
)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>You must enter a value for First Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Address_Exists</fullName>
        <active>false</active>
        <description>Verify Address Fields Exist</description>
        <errorConditionFormula>ISBLANK(MailingStreet) || 
ISBLANK(MailingCity) || 
ISBLANK(MailingState) || 
ISBLANK(MailingPostalCode) || 
ISBLANK(MailingCountry) ||
ISBLANK(County__c)</errorConditionFormula>
        <errorMessage>You must enter values for Street, City, County, State, Zip &amp; Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_Country_Exists</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;Data Team Admin&quot;, 
$Profile.Name &lt;&gt; &quot;Delegated Admin (Field)&quot;,
$User.Id &lt;&gt; &quot;005r0000000EZ0K&quot;,
ISBLANK(MailingCountry)
)</errorConditionFormula>
        <errorDisplayField>MailingCountry</errorDisplayField>
        <errorMessage>You must enter a value for Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verify_US_Postal_Code</fullName>
        <active>false</active>
        <description>Verify US Postal Code format

AND( 
OR(MailingCountry = &quot;USA&quot;, MailingCountry = &quot;US&quot;), 
NOT(REGEX(MailingPostalCode, &quot;\\d{5}(-\\d{4})?&quot;)) 
)</description>
        <errorConditionFormula>AND( 
OR(ISPICKVAL (MailingCountryCode, &apos;US&apos;)), 
NOT(REGEX(MailingPostalCode, &quot;\\d{5}(-\\d{4})?&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>MailingPostalCode</errorDisplayField>
        <errorMessage>Zip must be in XXXXX or XXXXX-XXXX format</errorMessage>
    </validationRules>
</CustomObject>